# Code-Jam-9

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
frontend/: design.css  index.py  site.html
frontend/static/css/: main.css
frontend/templates/: index.html
src/: README.md
src/client/: __main__.py  websocket.py
src/frontend/: design.css  site.html
src/frontend/src/: __init__.py  date.py
src/modules/: examples.py  weather.py
src/server/: __init__.py  __main__.py  websocket.py
src/utils/: __init__.py  models.py  registry.py  utils.py
