[tool.poetry]
name = "witty-wyverns"
version = "0.1.0"
description = ""
authors = ["Burak Kadir Er <ksenofanex@gmail.com>", "MilaDog <daniel.ryan.sergeant@gmail.com>", "Mmesek", "Neur0nz <nadavprr@gmail.com>", "Dyna-Soar <bodintiago@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
